fix(power-bar-wrapper): replace margin with position: absolute and top - fixes #11

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -16,7 +16,8 @@
         border-radius: var(--pb-border-radius);
         box-shadow: 5px 12px 40px 0px var(--spice-shadow);
         height: fit-content;
-        margin-top: 10vh;
+        top: 10vh;
+        position: absolute;
     }
     
     #power-bar-search {
