feat: jump selected suggestion to next category when pressing tab - closes #12

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -31,6 +31,10 @@
         &.has-suggestions {
             border-bottom: 1px solid var(--spice-shadow);
         }
+
+        &:focus-visible {
+            outline: none;
+        }
     }
     
     #power-bar-suggestions { // .has-suggestions
