fix: issue where power bar sometimes would not show - fixes #20

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     height: 100%;
     position: absolute;
+    top: 0;
     width: 100%;
     z-index: 100;
     background-color: rgba(0,0,0,.4);
