--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1,3 +1,12 @@
+:root {
+    --power-bar-background-color: var(--spice-tab-active);
+    --power-bar-main-text-color: var(--spice-text);
+    --power-bar-subtext-color: var(--spice-subtext);
+    --power-bar-active-background-color: var(--spice-button);
+    --power-bar-active-text-color: var(--spice-main);
+    --power-bar-border-color: var(--spice-shadow);
+}
+
 #power-bar-container {
     display: flex;
     justify-content: center;
@@ -13,7 +22,7 @@
 
     #power-bar-wrapper {
         max-width: 70rem;
-        background-color: var(--spice-tab-active);
+        background-color: var(--power-bar-background-color);
         border-radius: var(--pb-border-radius);
         box-shadow: 5px 12px 40px 0px var(--spice-shadow);
         height: fit-content;
@@ -26,11 +35,11 @@
         width: 700px;
         font-size: 2em;
         padding: 8px 16px;
-        color: var(--spice-text);
+        color: var(--power-bar-main-text-color);
         background-color: transparent;
 
         &.has-suggestions {
-            border-bottom: 1px solid var(--spice-shadow);
+            border-bottom: 1px solid var(--power-bar-border-color);
         }
 
         &:focus-visible {
@@ -48,6 +57,10 @@
         display: flex;
         flex-direction: column;
         gap: 1em;
+
+        h5 {
+            color: var(--power-bar-subtext-color);
+        }
     }
     
     .suggestions-category {
@@ -59,17 +72,17 @@
     .suggestions-category {
         &:not(:last-child) {
             padding-bottom: 1em;
-            border-bottom: 1px solid var(--spice-shadow);
+            border-bottom: 1px solid var(--power-bar-border-color);
         }
 
         p {
             font-size: 12px;
-            color: var(--spice-subtext);
+            color: var(--power-bar-subtext-color);
         }
     }
     
     .suggestion-item {
-        color: var(--spice-text);
+        color: var(--power-bar-main-text-color);
         display: flex;
         gap: 1em;
         align-items: center;
@@ -91,11 +104,11 @@
         }
 
         &__active {
-            background-color: var(--spice-button);
+            background-color: var(--power-bar-active-background-color);
             border-radius: 8px;
 
             span {
-                color: var(--spice-main) !important;
+                color: var(--power-bar-active-text-color) !important;
             }
         }
 
@@ -105,7 +118,7 @@
             }
 
             &:nth-child(2) {
-                color: var(--spice-subtext);
+                color: var(--power-bar-subtext-color);
                 font-size: 14px;
                 margin-top: -4px;
             }
@@ -115,5 +128,4 @@
     .hidden {
         display: none !important;
     }
-    
 }
